package FactoryEdit;

public class LoyalMember extends Member {

    public LoyalMember() {

        memberType = "Loyal";
        name       = "";
        age        = "";
        address    = "";
        duration   = "";
    }
}
