package MemberFactory;

public class StudentMember extends Member {
    public StudentMember()
    {
        memberType = "Student";
        name     = "Sean Hogan";
        age      = "20";
        address  = "Tralee";
        duration = "5";
    }
}
