package MembersDecorator;

public class BasicDiscount extends MemberDiscount {
}
