package MembersDecorator;

public class MemberDiscount {
}
