@startuml

title __DESIGNPATTERNSCA's Class Diagram__\n

  namespace  {
    namespace ookStratagy {
      abstract class BookStratagy.Book {
      }
    }
  }
  

  namespace  {
    namespace ookStratagy {
      class BookStratagy.BookDriver {
      }
    }
  }
  

  namespace  {
    namespace ookStratagy {
      interface BookStratagy.CoverBehaviour {
      }
    }
  }
  

  namespace  {
    namespace ookStratagy {
      class BookStratagy.HardCover {
      }
    }
  }
  

  namespace  {
    namespace ookStratagy {
      class BookStratagy.HorrorBook {
      }
    }
  }
  

  namespace  {
    namespace ookStratagy {
      class BookStratagy.NoCover {
      }
    }
  }
  

  namespace  {
    namespace ookStratagy {
      class BookStratagy.SoftCover {
      }
    }
  }
  

  namespace  {
    namespace ookStratagy {
      class BookStratagy.ThrillerBook {
      }
    }
  }
  

  namespace  {
    namespace ookStratagy {
      class BookStratagy.UIStrat {
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      interface CommandSales.CommandClass {
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      class CommandSales.CommandDriver {
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      class CommandSales.Half {
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      class CommandSales.HalfPriceStartCommand {
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      class CommandSales.HalfPriceStopCommand {
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      namespace ObserverAndCommand {
        class CommandSales.ObserverAndCommand.CheckSale {
        }
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      namespace ObserverAndCommand {
        class CommandSales.ObserverAndCommand.Observer {
        }
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      namespace ObserverAndCommand {
        class CommandSales.ObserverAndCommand.Sale {
        }
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      namespace ObserverAndCommand {
        interface CommandSales.ObserverAndCommand.Subject {
        }
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      class CommandSales.SaleCommand {
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      class CommandSales.Twenty {
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      class CommandSales.TwentyPercentStartCommand {
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      class CommandSales.TwentyPercentStopCommand {
      }
    }
  }
  

  namespace  {
    namespace ommandSales {
      class CommandSales.UIforCommand {
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.BasicMember {
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.LibraryMember {
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.LoyalMember {
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.Member {
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.MemberFactory {
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.MemberFactoryDriver {
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.OAPMember {
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.StudentMember {
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.UI_forFactory {
      }
    }
  }
  

  namespace  {
    class LibraryUI {
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.BasicMember {
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.LibraryMember {
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.LoyalMember {
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.Member {
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.MemberFactory {
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.MemberFactoryDriver {
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.OAPMember {
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.StudentMember {
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.BasicDiscount {
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      abstract class MembersDecorator.DiscountDecorator {
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.HalfPrice {
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.LoyalDiscount {
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      abstract class MembersDecorator.MemberDiscount {
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.MemberDiscountDriver {
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.OapDiscount {
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.SpringClearance {
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.StudentDiscount {
      }
    }
  }
  

  namespace  {
    namespace embersDecorator {
      class MembersDecorator.SummerSale {
      }
    }
  }
  

  namespace  {
    namespace otificationObserver {
      class NotificationObserver.Member {
      }
    }
  }
  

  namespace  {
    namespace otificationObserver {
      interface NotificationObserver.MemberNames {
      }
    }
  }
  

  namespace  {
    namespace otificationObserver {
      interface NotificationObserver.Observer {
      }
    }
  }
  

  namespace  {
    namespace otificationObserver {
      class NotificationObserver.ObserverMain {
      }
    }
  }
  

  namespace  {
    namespace otificationObserver {
      class NotificationObserver.Product {
      }
    }
  }
  

  namespace  {
    namespace otificationObserver {
      interface NotificationObserver.Subject {
      }
    }
  }
  

  namespace  {
    namespace emplateTransaction {
      abstract class TemplateTransaction.BookTransaction {
      }
    }
  }
  

  namespace  {
    namespace emplateTransaction {
      class TemplateTransaction.PurchaseBook {
      }
    }
  }
  

  namespace  {
    namespace emplateTransaction {
      class TemplateTransaction.RentBook {
      }
    }
  }
  

  namespace  {
    namespace emplateTransaction {
      class TemplateTransaction.TemplateDriver {
      }
    }
  }
  

  namespace  {
    class ViewMembersUI {
    }
  }
  

  BookStratagy.Book o-- BookStratagy.CoverBehaviour : coverBehaviour
  BookStratagy.HardCover .up.|> BookStratagy.CoverBehaviour
  BookStratagy.HorrorBook -up-|> BookStratagy.Book
  BookStratagy.NoCover .up.|> BookStratagy.CoverBehaviour
  BookStratagy.SoftCover .up.|> BookStratagy.CoverBehaviour
  BookStratagy.ThrillerBook -up-|> BookStratagy.Book
  CommandSales.HalfPriceStartCommand .up.|> CommandSales.CommandClass
  CommandSales.HalfPriceStartCommand o-- CommandSales.Half : half
  CommandSales.HalfPriceStopCommand .up.|> CommandSales.CommandClass
  CommandSales.HalfPriceStopCommand o-- CommandSales.Half : half
  CommandSales.ObserverAndCommand.CheckSale .up.|> CommandSales.ObserverAndCommand.Subject
  CommandSales.ObserverAndCommand.CheckSale o-- CommandSales.ObserverAndCommand.Sale : sales
  CommandSales.ObserverAndCommand.Sale -up-|> CommandSales.ObserverAndCommand.Observer
  CommandSales.SaleCommand o-- CommandSales.CommandClass : sale
  CommandSales.TwentyPercentStartCommand .up.|> CommandSales.CommandClass
  CommandSales.TwentyPercentStartCommand o-- CommandSales.Twenty : twenty
  CommandSales.TwentyPercentStopCommand .up.|> CommandSales.CommandClass
  CommandSales.TwentyPercentStopCommand o-- CommandSales.Twenty : twenty
  CommandSales.UIforCommand -up-|> javax.swing.JFrame
  FactoryEdit.BasicMember -up-|> FactoryEdit.Member
  FactoryEdit.LibraryMember o-- FactoryEdit.MemberFactory : factory
  FactoryEdit.LoyalMember -up-|> FactoryEdit.Member
  FactoryEdit.OAPMember -up-|> FactoryEdit.Member
  FactoryEdit.StudentMember -up-|> FactoryEdit.Member
  FactoryEdit.UI_forFactory .up.|> java.awt.event.ActionListener
  FactoryEdit.UI_forFactory -up-|> javax.swing.JFrame
  LibraryUI -up-|> javax.swing.JFrame
  MemberFactory.BasicMember -up-|> MemberFactory.Member
  MemberFactory.LibraryMember o-- MemberFactory.MemberFactory : factory
  MemberFactory.LoyalMember -up-|> MemberFactory.Member
  MemberFactory.OAPMember -up-|> MemberFactory.Member
  MemberFactory.StudentMember -up-|> MemberFactory.Member
  MembersDecorator.BasicDiscount -up-|> MembersDecorator.MemberDiscount
  MembersDecorator.DiscountDecorator -up-|> MembersDecorator.MemberDiscount
  MembersDecorator.DiscountDecorator o-- MembersDecorator.MemberDiscount : memberDiscount
  MembersDecorator.HalfPrice -up-|> MembersDecorator.DiscountDecorator
  MembersDecorator.LoyalDiscount -up-|> MembersDecorator.MemberDiscount
  MembersDecorator.OapDiscount -up-|> MembersDecorator.MemberDiscount
  MembersDecorator.SpringClearance -up-|> MembersDecorator.DiscountDecorator
  MembersDecorator.StudentDiscount -up-|> MembersDecorator.MemberDiscount
  MembersDecorator.SummerSale -up-|> MembersDecorator.DiscountDecorator
  NotificationObserver.Member .up.|> NotificationObserver.Observer
  NotificationObserver.Product .up.|> NotificationObserver.Subject
  NotificationObserver.Product o-- NotificationObserver.Member : mem
  TemplateTransaction.PurchaseBook -up-|> TemplateTransaction.BookTransaction
  TemplateTransaction.RentBook -up-|> TemplateTransaction.BookTransaction
  ViewMembersUI -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
